[package]
name = "vizz"
version = "0.1.0"
authors = ["Ryan Geary <rtgnj42@gmail.com>"]
edition = "2018"
description = "Tool for creating GraphViz/DOT visualizations of Rust data structures"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/vizz"
documentation = "https://docs.rs/vizz"
repository = "https://github.com/theryangeary/vizz"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
readonly = "0.2"
strum = "0.21"
strum_macros = "0.21"
