[package]
name = "vizz"
version = "0.2.0"
authors = ["Ryan Geary <rtgnj42@gmail.com>"]
edition = "2018"
description = "Tool for creating GraphViz/DOT visualizations of Rust data structures"
license = "MIT OR Apache-2.0"
homepage = "https://crates.io/crates/vizz"
documentation = "https://docs.rs/vizz"
repository = "https://github.com/theryangeary/vizz"
readme = "README.md"

[dependencies]
readonly = "0.2"
vizz_derive = { version = "0.1.0", optional = true, path = "./vizz_derive" }

[features]
default = ["derive"]

# provide derive(Visualize) macro
derive = ["vizz_derive"]

[workspace]
members = ["vizz_derive"]
